@@ -13,6 +13,7 @@ https://mhammond.github.io/pywin32_installers.html .
 
 Coming in build 311, as yet unreleased
 --------------------------------------
+* pywin32's own warnings will now refer to the caller, rather than to the internal source of warning itself (#2594, @Avasam)
 * Fixed a regression that broke special __dunder__ methods with CoClass. (#1870, #2493, @Avasam, @geppi)
 * Fixed `TypeError: cannot unpack non-iterable NoneType object` when registering an axscript client ScriptItem (#2513, @Avasam)
 * Fixed a memory leak when SafeArrays are used as out parameters (@the-snork)
